--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <h1>Selamat Datang!</h1>
-  <p>Ini adalah halamanyang sangat sederhana.</p>
+  <p>Ini adalah halaman yang sederhana.</p>
 </body>
 </html>
