--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Halaman Index</title>
 </head>
 <body>
-  <h1>Selamat Datang!</h1>
+  <h1>Selamat Datang kamu!</h1>
   <p>Ini adalah halaman yang sederhana.</p>
 </body>
 </html>
