enambahkan file index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
   <h1>Selamat Datang kamu!</h1>
-  <p>Ini adalah halaman yang sederhana.</p>
+  <p>Ini adalah halaman yang sangat sederhana.</p>
+
 </body>
 </html>
