--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
   <h1>Selamat Datang kamu!</h1>
   <p>Ini adalah halaman yang sangat sederhana.</p>
-
+  <p>wow oh gitu .</p>
 </body>
 </html>
