--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Halaman Index</title>
-</head>
-<body>
-  <h1>Selamat Datang kamu!</h1>
-  <p>Ini adalah halaman yang sangat sederhana.</p>
-  <p>wow oh gitu .</p>
-</body>
-</html>
+Hello kwangya!!
